-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
7444
This issue was created by maloo for sarah <sarah@whamcloud.com>
This issue relates to the following test suite run: https://maloo.whamcloud.com/test_sets/35689dbc-948f-11e2-93c6-52540035b04c.
The sub-test test_1 failed with the following error:
group write success, but expect EDQUOT
Info required for matching: sanity-quota 1